[package]
name = "plomo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.36.2", features = ["csv"]}
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["std", "alloc", "derive"] }
floco = { version = "0.1.0", features = ["std"], default-features = false}
toml = "0.8.11"
